Fix image paths

--- a/assets/scss/blocks/core/calendar.scss
+++ b/assets/scss/blocks/core/calendar.scss
@@ -78,7 +78,7 @@
 					content: '';
 					display: inline-block;
 					height: 1.5rem;
-					mask-image: url(../../../../build/images/icons/icon-circle-right.svg);
+					mask-image: url(../../../images/icons/icon-circle-right.svg);
 					mask-size: contain;
 					position: absolute;
 					left: 0;
@@ -111,7 +111,7 @@
 					display: inline-block;
 					height: 1.5rem;
 					right: 0;
-					mask-image: url(../../../../build/images/icons/icon-circle-right.svg);
+					mask-image: url(../../../images/icons/icon-circle-right.svg);
 					mask-size: contain;
 					position: absolute;
 					text-indent: 9999px;
