--- a/assets/scss/blocks/core/query-pagination.scss
+++ b/assets/scss/blocks/core/query-pagination.scss
@@ -25,7 +25,7 @@
 					display: inline-block;
 					height: 2rem;
 					margin-left: 0.5rem;
-					mask-image: url(../../../../build/images/icons/icon-arrow.svg);
+					mask-image: url(../../../images/icons/icon-arrow.svg);
 					mask-size: contain;
 					position: absolute;
 					right: 0;
@@ -64,7 +64,7 @@
 					display: inline-block;
 					height: 2rem;
 					margin-left: 0.5rem;
-					mask-image: url(../../../../build/images/icons/icon-arrow.svg);
+					mask-image: url(../../../images/icons/icon-arrow.svg);
 					mask-size: contain;
 					position: absolute;
 					right: 0;
