--- a/assets/scss/pages/_404.scss
+++ b/assets/scss/pages/_404.scss
@@ -15,7 +15,7 @@
 
 			&::before {
 				animation: glitch 1s linear infinite;
-				background-image: url(../../build/images/icons/icon-dino.svg);
+				background-image: url(../images/icons/icon-dino.svg);
 				background-repeat: no-repeat;
 				background-size: contain;
 				content: '';
