--- a/templates/single.html
+++ b/templates/single.html
@@ -1,71 +1,49 @@
 <!-- wp:template-part {"slug":"header","theme":"wds-bt","tagName":"header","className":"site-header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained"},"metadata":{"name":"Main"}} -->
-<main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
+<!-- wp:group {"tagName":"main","align":"full","metadata":{"name":"Content"}} -->
+<main class="wp-block-group alignfull">
+	<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|50"},"margin":{"bottom":"var:preset|spacing|40"}}},"layout":{"type":"constrained"}} -->
+	<div class="wp-block-group"
+		style="margin-bottom:var(--wp--preset--spacing--40);padding-top:var(--wp--preset--spacing--50)">
+		<!-- wp:post-featured-image {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|40"}}}} /-->
 
-	<!-- wp:group {"tagName":"article","layout":{"type":"default"},"metadata":{"name":"Content"}} -->
-	<article class="wp-block-group">
-		<!-- wp:post-title {"level":1} /-->
-		<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-	</article>
-	<!-- /wp:group -->
+		<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|10","padding":{"top":"0","bottom":"0"}}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch"}} -->
+		<div class="wp-block-group" style="padding-top:0;padding-bottom:0">
+			<!-- wp:post-title {"level":1,"fontSize":"x-large"} /-->
 
-	<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|x-small","padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained"},"metadata":{"name":"Post Terms"}} -->
-	<div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
-		<!-- wp:post-terms {"term":"category","textAlign":"center","prefix":"Categories"} /-->
-		<!-- wp:post-terms {"term":"post_tag","textAlign":"center","prefix":"Tags"} /-->
+		</div>
+		<!-- /wp:group -->
 	</div>
 	<!-- /wp:group -->
 
-	<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"},"metadata":{"name":"Pagination"}} -->
-	<div class="wp-block-group">
-		<!-- wp:post-navigation-link /-->
-		<!-- wp:post-navigation-link {"type":"previous"} /-->
-	</div>
-	<!-- /wp:group -->
+	<!-- wp:post-content {"lock":{"move":false,"remove":true},"align":"full","layout":{"type":"constrained"}} /-->
 
-	<!-- wp:comments -->
-	<div class="wp-block-comments">
-		<!-- wp:comments-title /-->
-		<!-- wp:comment-template -->
-			<!-- wp:columns -->
-			<div class="wp-block-columns">
-				<!-- wp:column {"width":"40px"} -->
-				<div class="wp-block-column" style="flex-basis:40px">
-					<!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /-->
-				</div>
-				<!-- /wp:column -->
+	<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|40"},"padding":{"bottom":"var:preset|spacing|50"}}},"layout":{"type":"constrained"}} -->
+	<div class="wp-block-group"
+		style="margin-top:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--50)">
+		<!-- wp:post-terms {"term":"post_tag","separator":"  ","className":"is-style-pill"} /-->
 
-				<!-- wp:column -->
-				<div class="wp-block-column">
-					<!-- wp:comment-author-name {"fontSize":"small"} /-->
-
-					<!-- wp:group {"style":{"spacing":{"margin":{"top":"0px","bottom":"0px"}}},"layout":{"type":"flex"}} -->
-					<div class="wp-block-group">
-						<!-- wp:comment-date {"fontSize":"small"} /-->
-						<!-- wp:comment-edit-link {"fontSize":"small"} /-->
-					</div>
-					<!-- /wp:group -->
-
-					<!-- wp:comment-content /-->
-					<!-- wp:comment-reply-link {"fontSize":"small"} /-->
-				</div>
-				<!-- /wp:column -->
+		<!-- wp:group {"layout":{"type":"constrained"}} -->
+		<div class="wp-block-group">
+			<!-- wp:spacer {"height":"var:preset|spacing|40"} -->
+			<div style="height:var(--wp--preset--spacing--40)" aria-hidden="true" class="wp-block-spacer">
 			</div>
-			<!-- /wp:columns -->
-		<!-- /wp:comment-template -->
+			<!-- /wp:spacer -->
 
-		<!-- wp:comments-pagination {"layout":{"type":"flex","justifyContent":"center"}} -->
-			<!-- wp:comments-pagination-previous /-->
-			<!-- wp:comments-pagination-numbers /-->
-			<!-- wp:comments-pagination-next /-->
-		<!-- /wp:comments-pagination -->
+			<!-- wp:separator {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|40"}}},"backgroundColor":"contrast-3","className":"is-style-wide"} -->
+			<hr class="wp-block-separator has-text-color has-contrast-3-color has-alpha-channel-opacity has-contrast-3-background-color has-background is-style-wide" style="margin-bottom:var(--wp--preset--spacing--40)"/>
+			<!-- /wp:separator -->
 
-		<!-- wp:post-comments-form /-->
+			<!-- wp:pattern {"slug":"twentytwentyfour/hidden-comments"} /-->
+
+			<!-- wp:pattern {"slug":"twentytwentyfour/hidden-post-navigation"} /-->
+
+		</div>
+		<!-- /wp:group -->
 	</div>
-	<!-- /wp:comments -->
-
+	<!-- /wp:group -->
 </main>
 <!-- /wp:group -->
+
 
 <!-- wp:template-part {"slug":"footer","theme":"wds-bt","tagName":"footer","className":"site-footer"} /-->
