Fix styling for core blocks

--- a/assets/scss/blocks/core/list.scss
+++ b/assets/scss/blocks/core/list.scss
@@ -1,3 +1,5 @@
+@import '../../abstracts/responsive-mixins';
+
 /* -- List -- */
 
 main,
@@ -9,16 +11,21 @@ main,
 
 			li {
 				padding-bottom: var(--wp--preset--spacing--20);
-				padding-left: var(--wp--preset--spacing--40);
+				padding-left: var(--wp--preset--spacing--50);
 				position: relative;
 
+				@include responsive-max(600px) {
+					padding-left: var(--wp--preset--spacing--70);
+				}
+
 				&::before {
-					border-bottom: 2px solid var(--wp--preset--color--grey-200);
+					background-color: var(--wp--preset--color--grey-200);
 					content: '';
 					display: block;
-					height: 0.75rem;
+					height: 0.125rem;
 					left: 0;
 					position: absolute;
+					top: 0.5625rem;
 					width: 1.5rem;
 				}
 
@@ -39,6 +46,7 @@ main,
 	ol {
 		&:not([class]),
 		&.wp-block-list {
+			list-style-position: inside;
 			padding-left: var(
 				--wp--preset--spacing--30
 			) !important; /* stylelint-disable-line declaration-no-important */
