--- a/templates/page-blank.html
+++ b/templates/page-blank.html
@@ -1,13 +1,15 @@
-<!-- wp:group {"tagName":"main",,"metadata":{"name":"Content"}"style":{"spacing":{"margin":{"top":"0"}}}} -->
-<main class="wp-block-group" style="margin-top:0">
+<!-- wp:group {"tagName":"main","metadata":{"name":"Content"}} -->
+<main class="wp-block-group">
 
-	<!-- wp:group {"metadata":{"name":"Content"}} -->
+	<!-- wp:group -->
 	<div class="wp-block-group">
+
 		<!-- wp:group {"layout":{"type":"constrained"}} -->
 		<div class="wp-block-group">
 
 			<!-- wp:spacer {"height":"var:preset|spacing|50"} -->
-			<div style="height:var(--wp--preset--spacing--50)" aria-hidden="true" class="wp-block-spacer"></div>
+			<div style="height:var(--wp--preset--spacing--50)" aria-hidden="true" class="wp-block-spacer">
+			</div>
 			<!-- /wp:spacer -->
 
 			<!-- wp:post-title {"textAlign":"left","level":1} /-->
@@ -15,6 +17,7 @@
 			<!-- wp:spacer {"height":"var:preset|spacing|30","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
 			<div style="margin-top:0;margin-bottom:0;height:var(--wp--preset--spacing--30)" aria-hidden="true" class="wp-block-spacer"></div>
 			<!-- /wp:spacer -->
+
 		</div>
 		<!-- /wp:group -->
 
@@ -23,8 +26,9 @@
 	</div>
 	<!-- /wp:group -->
 
-	<!-- wp:spacer {"height":"var:preset|spacing|70","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
-	<div style="margin-top:0;margin-bottom:0;height:var(--wp--preset--spacing--70)" aria-hidden="true" class="wp-block-spacer"></div>
+	<!-- wp:spacer -->
+	<div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
 	<!-- /wp:spacer -->
+
 </main>
 <!-- /wp:group -->
