--- a/templates/page-no-title.html
+++ b/templates/page-no-title.html
@@ -1,8 +1,25 @@
 <!-- wp:template-part {"slug":"header","theme":"wds-bt","tagName":"header","className":"site-header"} /-->
 
-<!-- wp:group {"tagName":"main",,"metadata":{"name":"Content"}"style":{"spacing":{"margin":{"top":"0"}}}} -->
-<main class="wp-block-group" style="margin-top:0">
-	<!-- wp:post-content {"lock":{"move":false,"remove":true},"layout":{"type":"constrained"}} /-->
+<!-- wp:group {"tagName":"main","metadata":{"name":"Content"}} -->
+<main class="wp-block-group">
+
+	<!-- wp:group -->
+	<div class="wp-block-group">
+
+		<!-- wp:spacer {"height":"var:preset|spacing|50"} -->
+		<div style="height:var(--wp--preset--spacing--50)" aria-hidden="true" class="wp-block-spacer">
+		</div>
+		<!-- /wp:spacer -->
+
+		<!-- wp:post-content {"lock":{"move":false,"remove":true},"layout":{"type":"constrained"}} /-->
+
+	</div>
+	<!-- /wp:group -->
+
+	<!-- wp:spacer -->
+	<div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
+	<!-- /wp:spacer -->
+
 </main>
 <!-- /wp:group -->
 
