--- a/templates/search.html
+++ b/templates/search.html
@@ -2,6 +2,12 @@
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"},"metadata":{"name":"Content"}} -->
 <main class="wp-block-group">
+
+	<!-- wp:spacer {"height":"var:preset|spacing|50"} -->
+	<div style="height:var(--wp--preset--spacing--50)" aria-hidden="true" class="wp-block-spacer">
+	</div>
+	<!-- /wp:spacer -->
+
 	<!-- wp:search {"label":"Search","showLabel":false,"width":75,"widthUnit":"%","buttonText":"Search","buttonPosition":"button-inside","buttonUseIcon":true,"align":"center"} /-->
 
 	<!-- wp:query-title {"type":"search"} /-->
@@ -46,6 +52,11 @@
 		<!-- /wp:query-no-results -->
 	</div>
 	<!-- /wp:query -->
+
+	<!-- wp:spacer -->
+	<div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
+	<!-- /wp:spacer -->
+
 </main>
 <!-- /wp:group -->
 
