--- a/templates/single.html
+++ b/templates/single.html
@@ -2,13 +2,18 @@
 
 <!-- wp:group {"tagName":"main","align":"full","metadata":{"name":"Content"}} -->
 <main class="wp-block-group alignfull">
-	<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|50"},"margin":{"bottom":"var:preset|spacing|40"}}},"layout":{"type":"constrained"}} -->
-	<div class="wp-block-group"
-		style="margin-bottom:var(--wp--preset--spacing--40);padding-top:var(--wp--preset--spacing--50)">
-		<!-- wp:post-featured-image {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|40"}}}} /-->
 
-		<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|10","padding":{"top":"0","bottom":"0"}}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch"}} -->
-		<div class="wp-block-group" style="padding-top:0;padding-bottom:0">
+	<!-- wp:group {"layout":{"type":"constrained"}} -->
+	<div class="wp-block-group">
+
+		<!-- wp:group {"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch"}} -->
+		<div class="wp-block-group">
+
+			<!-- wp:spacer {"height":"var:preset|spacing|50"} -->
+			<div style="height:var(--wp--preset--spacing--50)" aria-hidden="true" class="wp-block-spacer">
+			</div>
+			<!-- /wp:spacer -->
+
 			<!-- wp:post-title {"level":1,"fontSize":"x-large"} /-->
 
 		</div>
@@ -21,7 +26,23 @@
 	<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|40"},"padding":{"bottom":"var:preset|spacing|50"}}},"layout":{"type":"constrained"}} -->
 	<div class="wp-block-group"
 		style="margin-top:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--50)">
-		<!-- wp:post-terms {"term":"post_tag","separator":"  ","className":"is-style-pill"} /-->
+
+		<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|x-small","padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained"},"metadata":{"name":"Post Terms"}} -->
+		<div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
+
+			<!-- wp:post-terms {"term":"category","textAlign":"center","prefix":"Categories","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} /-->
+
+			<!-- wp:post-terms {"term":"post_tag","textAlign":"center","prefix":"Tags","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} /-->
+
+		</div>
+		<!-- /wp:group -->
+
+		<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"},"metadata":{"name":"Pagination"}} -->
+		<div class="wp-block-group">
+			<!-- wp:post-navigation-link /-->
+			<!-- wp:post-navigation-link {"type":"previous"} /-->
+		</div>
+		<!-- /wp:group -->
 
 		<!-- wp:group {"layout":{"type":"constrained"}} -->
 		<div class="wp-block-group">
@@ -30,13 +51,46 @@
 			</div>
 			<!-- /wp:spacer -->
 
-			<!-- wp:separator {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|40"}}},"backgroundColor":"contrast-3","className":"is-style-wide"} -->
-			<hr class="wp-block-separator has-text-color has-contrast-3-color has-alpha-channel-opacity has-contrast-3-background-color has-background is-style-wide" style="margin-bottom:var(--wp--preset--spacing--40)"/>
-			<!-- /wp:separator -->
+			<!-- wp:comments -->
+			<div class="wp-block-comments">
+				<!-- wp:comments-title /-->
+				<!-- wp:comment-template -->
+					<!-- wp:columns -->
+					<div class="wp-block-columns">
+						<!-- wp:column {"width":"40px"} -->
+						<div class="wp-block-column" style="flex-basis:40px">
+							<!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /-->
+						</div>
+						<!-- /wp:column -->
 
-			<!-- wp:pattern {"slug":"twentytwentyfour/hidden-comments"} /-->
+						<!-- wp:column -->
+						<div class="wp-block-column">
+							<!-- wp:comment-author-name {"fontSize":"small"} /-->
 
-			<!-- wp:pattern {"slug":"twentytwentyfour/hidden-post-navigation"} /-->
+							<!-- wp:group {"style":{"spacing":{"margin":{"top":"0px","bottom":"0px"}}},"layout":{"type":"flex"}} -->
+							<div class="wp-block-group">
+								<!-- wp:comment-date {"fontSize":"small"} /-->
+								<!-- wp:comment-edit-link {"fontSize":"small"} /-->
+							</div>
+							<!-- /wp:group -->
+
+							<!-- wp:comment-content /-->
+							<!-- wp:comment-reply-link {"fontSize":"small"} /-->
+						</div>
+						<!-- /wp:column -->
+					</div>
+					<!-- /wp:columns -->
+				<!-- /wp:comment-template -->
+
+				<!-- wp:comments-pagination {"layout":{"type":"flex","justifyContent":"center"}} -->
+					<!-- wp:comments-pagination-previous /-->
+					<!-- wp:comments-pagination-numbers /-->
+					<!-- wp:comments-pagination-next /-->
+				<!-- /wp:comments-pagination -->
+
+				<!-- wp:post-comments-form /-->
+			</div>
+			<!-- /wp:comments -->
 
 		</div>
 		<!-- /wp:group -->
