--- a/assets/scss/blocks/core/list.scss
+++ b/assets/scss/blocks/core/list.scss
@@ -62,6 +62,10 @@ main,
 				&:last-child {
 					padding-bottom: 0;
 				}
+
+				.rich-text {
+					display: inline-block;
+				}
 			}
 
 			ol {
