--- a/assets/scss/abstracts/_abstracts.scss
+++ b/assets/scss/abstracts/_abstracts.scss
@@ -1,3 +1,4 @@
 // 'abstracts/' holds files with variables, mixins, and functions.
+@import './mobile-only-mixins';
 @import './responsive-mixins';
 @import './utility';
