WDSBT-12 - Remove top and bottom margins from cover block and add top margin for group blocks inside columns block

--- a/assets/scss/blocks/core/group.scss
+++ b/assets/scss/blocks/core/group.scss
@@ -26,4 +26,8 @@
 			}
 		}
 	}
+
+	.wp-block-column.is-layout-flow.wp-block-column-is-layout-flow & {
+		margin-block-start: var(--wp--preset--spacing--30);
+	}
 }
