WDSBT-12 - Add action and focus style to mobile dropdown

--- a/assets/scss/blocks/core/navigation.scss
+++ b/assets/scss/blocks/core/navigation.scss
@@ -112,7 +112,8 @@
 				overflow: hidden;
 			}
 
-			&:focus {
+			&:focus,
+			&:active {
 				> .wp-block-navigation-item__content {
 					&::after {
 						transform: rotate(-135deg);
