WDSBT-12 - Change focus to focus-within

--- a/assets/scss/blocks/core/navigation.scss
+++ b/assets/scss/blocks/core/navigation.scss
@@ -112,7 +112,7 @@
 				overflow: hidden;
 			}
 
-			&:focus,
+			&:focus-within,
 			&:active {
 				> .wp-block-navigation-item__content {
 					&::after {
