WDSBT-12 - Fix for scrolling header if admin bar is showing

--- a/assets/scss/abstracts/_utility.scss
+++ b/assets/scss/abstracts/_utility.scss
@@ -87,7 +87,10 @@ figure[class*=' blur-'] {
 .js-enabled {
 	.site-header {
 		position: sticky;
-		top: 0;
+		top: var(
+			--wp-admin--admin-bar--height,
+			0
+		) !important; /* stylelint-disable-line declaration-no-important */
 		transition: top 0.5s;
 		z-index: 100;
 	}
