Remove padding on footer

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
 
 .site-footer {
 	border-top: 1px solid var(--wp--preset--color--grey-400);
-	padding-bottom: var(--wp--preset--spacing--40);
-	padding-top: var(--wp--preset--spacing--40);
+	padding-bottom: 0;
+	padding-top: 0;
 	margin-top: var(--wp--preset--spacing--70);
 }
