--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -4,5 +4,5 @@
 	border-top: 1px solid var(--wp--preset--color--grey-400);
 	padding-bottom: 0;
 	padding-top: 0;
-	margin-top: var(--wp--preset--spacing--70);
+	margin-top: 0;
 }
