--- a/templates/single.html
+++ b/templates/single.html
@@ -30,9 +30,9 @@
 		<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|x-small","padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained"},"metadata":{"name":"Post Terms"}} -->
 		<div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
 
-			<!-- wp:post-terms {"term":"category","textAlign":"center","prefix":"Categories","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} /-->
+			<!-- wp:post-terms {"term":"category","textAlign":"center","prefix":"Categories: ","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} /-->
 
-			<!-- wp:post-terms {"term":"post_tag","textAlign":"center","prefix":"Tags","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} /-->
+			<!-- wp:post-terms {"term":"post_tag","textAlign":"center","prefix":"Tags: ","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} /-->
 
 		</div>
 		<!-- /wp:group -->
