--- a/assets/scss/components/_components.scss
+++ b/assets/scss/components/_components.scss
@@ -1,2 +1,3 @@
-// 'components/' is for files styling components (e.g., posts, comments, grid items).
+// 'components/' is for files styling components (e.g., posts,
+// comments, grid items).
 @import './forms';
