--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -1,3 +1,4 @@
-// 'layout/' includes styles for layout elements (grids, headers, footers, etc.).
+// 'layout/' includes styles for layout elements (grids,
+// headers, footers, etc.).
 @import './header';
 @import './footer';
