--- a/assets/scss/pages/_pages.scss
+++ b/assets/scss/pages/_pages.scss
@@ -1,4 +1,5 @@
-// 'templates/' houses files with template-specific styles (e.g., front page template styles, no-sidebar styles).
+// 'templates/' houses files with template-specific styles (e.g.,
+// front page template styles, no-sidebar styles).
 @import './archive';
 @import './search';
 @import './404';
