--- a/assets/scss/blocks/core/cover.scss
+++ b/assets/scss/blocks/core/cover.scss
@@ -5,9 +5,7 @@
 		.has-background-dim:not([class*='-background-color']) {
 			background-color: transparent;
 			background-image: linear-gradient(
-				to top,
-				rgba(0, 0, 0, 0.6),
-				rgba(0, 0, 0, 1)
+				to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 1)
 			);
 			opacity: 1;
 		}
