--- a/assets/scss/blocks/core/group.scss
+++ b/assets/scss/blocks/core/group.scss
@@ -5,7 +5,16 @@
 		&.wp-block-group-is-layout-constrained {
 			&.alignfull {
 				> :where(
-				[class*='wp-block-']:not(.alignfull):not([class*='__']), p, h1, h2, h3, h4, h5, h6, ul, ol
+				[class*='wp-block-']:not(.alignfull):not([class*='__']),
+				p,
+				h1,
+				h2,
+				h3,
+				h4,
+				h5,
+				h6,
+				ul,
+				ol
 			) {
 					padding-left: var(
 						--wp--style--root--padding-left
