Fix rtl button style override

--- a/assets/scss/blocks/core/button.scss
+++ b/assets/scss/blocks/core/button.scss
@@ -26,8 +26,10 @@
 			display: inline-block;
 			height: 1rem;
 			margin-left: 0.5rem;
+			margin-right: unset;
 			mask-image: url(../../../images/icons/icon-circle-right.svg);
 			mask-size: contain;
+			left: unset;
 			position: absolute;
 			right: 0.75rem;
 			vertical-align: middle;
