Add blocks/custom folder update build process and readme

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: WDS BT
 Theme URI: https://webdevstudios.com/
 Author: WebDevStudios
 Author URI: https://webdevstudios.com/
-Description: Introducing WDS BT, a sleek block theme inspired by the Powder Theme. Designed as a versatile base theme, it offers a modern layout, user-friendly interface, and seamless integration with the WordPress block editor. Elevate your website effortlessly with WDS BT, where design meets functionality in a compact package.
+Description: Meet WDS BT, a stylish block theme, tailored for WordPress, featuring native blocks and site editor compatibility.
 Requires at least: 6.4
 Tested up to: 6.4
 Requires PHP: 8.2
@@ -11,5 +11,5 @@ Version: 0.1.0
 License: GNU General Public License v3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: wdsbt
-Tags: block-patterns, block-styles, custom-colors, custom-logo, custom-menu, e-commerce, editor-style, full-site-editing, one-column, style-variations, translation-ready, wide-blocks
+Tags: block-patterns, block-styles, editor-style, full-site-editing, translation-ready
 */
