WDSBT-23 - Button styles IN PROGRESS

--- a/assets/scss/blocks/core/button.scss
+++ b/assets/scss/blocks/core/button.scss
@@ -65,7 +65,7 @@
 		}
 	}
 
-	&.large {
+	&.has-size-l {
 		.wp-block-button__link {
 			border-radius: 6px;
 			border-width: 2px;
@@ -78,7 +78,7 @@
 		}
 	}
 
-	&.xlarge {
+	&.has-size-xl {
 		.wp-block-button__link {
 			border-radius: 6px;
 			border-width: 2px;
