WDSBT-23 - Adjust related posts pattern and styles

--- a/assets/scss/patterns/related-posts.scss
+++ b/assets/scss/patterns/related-posts.scss
@@ -1,10 +1,11 @@
 /** cards **/
 
 .related-posts-query {
-
 	.wp-block-post {
 		border-radius: 10px;
-		box-shadow: 0 8px 16px 0 rgba(48, 49, 51, 0.1), 0 0 1px 0 rgba(48, 49, 51, 0.05);
+		box-shadow:
+			0 8px 16px 0 rgba(48, 49, 51, 0.1),
+			0 0 1px 0 rgba(48, 49, 51, 0.05);
 
 		> *:not(.wp-block-post-featured-image):not(hr) {
 			padding: 0.5rem 1.875rem;
@@ -27,7 +28,6 @@
 					color: var(--wp--preset--color--primary-500);
 				}
 			}
-
 		}
 
 		.wp-block-post-title {
