WDSBT-23 - Update templates for single and archive

--- a/templates/single.html
+++ b/templates/single.html
@@ -26,6 +26,13 @@
 		</div>
 		<!-- /wp:group -->
 
+	</div>
+	<!-- /wp:group -->
+
+	<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|40"},"padding":{"bottom":"var:preset|spacing|50"}}},"layout":{"type":"constrained"}} -->
+	<div class="wp-block-group"
+		style="margin-top:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--50)">
+
 		<!-- wp:pattern {"slug":"wdsbt/related-posts"} /-->
 	</div>
 	<!-- /wp:group -->
