--- a/templates/archive.html
+++ b/templates/archive.html
@@ -18,7 +18,7 @@
 	</div>
 	<!-- /wp:group -->
 
-	<!-- wp:query {"queryId":0,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
+	<!-- wp:query {"queryId":0,"query":{"inherit":true}} -->
 	<div class="wp-block-query">
 
 		<!-- wp:post-template {"layout":{"type":"grid","columnCount":3}} -->
