--- a/assets/scss/blocks/core/button.scss
+++ b/assets/scss/blocks/core/button.scss
@@ -65,28 +65,40 @@
 		}
 	}
 
-	&.has-size-l {
+	&.has-size-m {
 		.wp-block-button__link {
-			border-radius: 6px;
-			border-width: 2px;
-			font-size: 1rem;
+			font-size: var(--wp--preset--font-size--s);
+			padding: 0.625rem 2.5rem 0.625rem 1.25rem;
+
+			&::after {
+				height: 1.25rem;
+				width: 1.25rem;
+			}
 		}
 
-		&::after {
-			height: 1.25rem;
-			width: 1.25rem;
-		}
 	}
 
-	&.has-size-xl {
+	&.has-size-l {
 		.wp-block-button__link {
-			border-radius: 6px;
-			border-width: 2px;
-			font-size: var(--wp--preset--font-size--s);
+			font-size: var(--wp--preset--font-size--m);
+			padding: 0.9375rem 3rem 0.9375rem 1.25rem;
 
 			&::after {
 				height: 1.5rem;
 				width: 1.5rem;
+			}
+		}
+
+	}
+
+	&.has-size-xl {
+		.wp-block-button__link {
+			font-size: var(--wp--preset--font-size--l);
+			padding: 0.9375rem 3rem 0.9375rem 1.25rem;
+
+			&::after {
+				height: 1.75rem;
+				width: 1.75rem;
 			}
 		}
 	}
