--- a/assets/scss/blocks/core/post-terms.scss
+++ b/assets/scss/blocks/core/post-terms.scss
@@ -1,13 +1,12 @@
 /* -- post-terms -- */
 
 .wp-block-post-terms {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	gap: var(--wp--preset--spacing--10);
+
 	.wp-block-post-terms__separator {
 		display: none;
-	}
-
-	a {
-		font-weight: 600;
-		padding-left: 0.75rem;
-		text-decoration: none;
 	}
 }
