--- a/assets/scss/blocks/core/query.scss
+++ b/assets/scss/blocks/core/query.scss
@@ -5,20 +5,48 @@
 .wp-block-query {
 	.wp-block-post-template {
 		.wp-block-post {
-			margin-top: var(
-				--wp--preset--spacing--30
-			) !important; /* stylelint-disable-line declaration-no-important */
+			border-radius: 10px;
+			box-shadow:
+				0 0.5rem 1rem 0 rgba(48, 49, 51, 0.1),
+				0 0 0.0625rem 0 rgba(48, 49, 51, 0.05);
+
+			&:not(.has-post-thumbnail) {
+				padding-top: 1.25rem;
+			}
+
+			> *:not(.wp-block-post-featured-image):not(hr) {
+				padding: 0.5rem 1.875rem;
+			}
+
+			hr {
+				border-top: 10px;
+				margin: 0;
+			}
+
+			.wp-block-post-featured-image {
+				aspect-ratio: 16/9;
+				margin-bottom: var(--wp--preset--spacing--20);
+				overflow: hidden;
+
+				img {
+					border-top-left-radius: 10px;
+					border-top-right-radius: 10px;
+					object-fit: cover;
+				}
+			}
 
 			.wp-block-post-title {
-				margin-top: 0;
+				color: var(--wp--preset--color--black);
+				display: inline-block;
+				font-family: var(--wp--preset--font-family--headline);
+				font-size: 1.375rem;
+				font-weight: 600;
+				margin: 0;
+				padding-bottom: 0;
+				text-decoration: none;
 
 				a {
 					color: var(--wp--preset--color--black);
-					display: inline-block;
-					font-family: var(--wp--preset--font-family--headline);
-					font-size: 1.375rem;
-					font-weight: 600;
-					padding-bottom: 0;
 					text-decoration: none;
 
 					&:hover,
@@ -33,12 +61,12 @@
 				display: block;
 				font-family: var(--wp--preset--font-family--body);
 				font-size: var(--wp--preset--font-size--xxs);
-				margin-top: 0.5rem !important; /* stylelint-disable-line declaration-no-important */
+				margin-top: 0 !important; /* stylelint-disable-line declaration-no-important */
 				padding-bottom: 0;
 
 				+ p {
 					font-size: var(--wp--preset--font-size--xxs);
-					margin-top: 0.5rem !important; /* stylelint-disable-line declaration-no-important */
+					margin-top: 0 !important; /* stylelint-disable-line declaration-no-important */
 					padding-bottom: 0;
 				}
 			}
@@ -61,25 +89,31 @@
 			}
 
 			.wp-block-post-excerpt {
-				margin-top: 0.75rem;
+				color: var(--wp--preset--color--grey-500);
+				margin-top: 0;
+				padding: 0 0 1.25rem 0;
+
+				.wp-block-post-excerpt__excerpt {
+					margin-top: 0 !important; /* stylelint-disable-line declaration-no-important */
+				}
 
 				.wp-block-post-excerpt__more-text {
-					margin-top: 0;
-					padding-top: 0;
+					margin-bottom: 0.75rem;
+					margin-top: 0.75rem;
 
 					.wp-block-post-excerpt__more-link {
 						color: var(--wp--preset--color--primary-500);
 						display: block;
 						font-family: var(--wp--preset--font-family--body);
-						font-size: var(--wp--preset--font-size--xs);
-						font-weight: 700;
+						font-size: var(--wp--preset--font-size--xxs);
+						font-weight: 300;
 						padding-top: 1rem;
-						text-decoration: none;
+						text-decoration: underline;
 						width: max-content;
 
 						&:hover,
 						&:focus {
-							color: var(--wp--preset--color--primary-700);
+							color: var(--wp--preset--color--primary-300);
 						}
 					}
 				}
@@ -89,14 +123,6 @@
 		&.wp-block-post-template-is-layout-grid {
 			.wp-block-post {
 				margin-top: 0 !important; /* stylelint-disable-line declaration-no-important */
-
-				.wp-block-post-date {
-					margin-top: 0.75rem !important; /* stylelint-disable-line declaration-no-important */
-				}
-
-				@include responsive-min(960px) {
-					margin: 0 2.25rem 1.25rem 0;
-				}
 			}
 		}
 	}
