Update block template

--- a/inc/block-template/block/style.scss.mustache
+++ b/inc/block-template/block/style.scss.mustache
@@ -6,5 +6,7 @@
  */
 
 .wp-block-{{namespace}}-{{slug}} {
-	border: 1px dotted var(--wp--preset--color--grey-400);
+	font-size: 1em;
+	background: #ffff001a;
+	padding: 1em;
 }
