--- a/inc/block-template/block/edit.js.mustache
+++ b/inc/block-template/block/edit.js.mustache
@@ -1,22 +1,36 @@
 /**
- * WordPress Dependencies
+ * Retrieves the translation of text.
+ *
+ * @see https://developer.wordpress.org/block-editor/reference-guides/packages/packages-i18n/
  */
 import { __ } from '@wordpress/i18n';
-import { useBlockProps } from '@wordpress/block-editor';
 
 /**
- * Internal Dependencies
+ * React hook that is used to mark the block wrapper element.
+ * It provides all the necessary props like the class name.
+ *
+ * @see https://developer.wordpress.org/block-editor/reference-guides/packages/packages-block-editor/#useblockprops
  */
-import './editor.scss';
+import { useBlockProps } from '@wordpress/block-editor';
 
 /**
  * The edit function describes the structure of your block in the context of the
  * editor. This represents what the editor will render when the block is used.
  *
  * @see https://developer.wordpress.org/block-editor/reference-guides/block-api/block-edit-save/#edit
+ *
+ * @param {Object}   props               Properties passed to the function.
+ * @param {Object}   props.attributes    Available block attributes.
+ * @param {Function} props.setAttributes Function that updates individual attributes.
+ *
+ * @return {Element} Element to render.
  */
-export default function Edit() {
+export default function Edit( { attributes, setAttributes } ) {
+	const blockProps = useBlockProps();
+
 	return (
-		<p {...useBlockProps()}>{__('{{title}} – hello from the editor!', '{{textdomain}}')}</p>
+		<p { ...blockProps }>
+			{ __( '{{title}} – hello from the editor!', '{{textdomain}}' ) }
+		</p>
 	);
 }
